<resources>
    <string name="app_name">Contact List</string>

    <string name="hint_name_field">Name</string>
    <string name="hint_phoneticname_field">Phonetic Name</string>
    <string name="hint_lastname_field">Lastname</string>
    <string name="hint_company_field">Company</string>
    <string name="hint_phone_field">Phone</string>

    <string name="label_main_menu_add_contact">New</string>
    <string name="empty_list_message">No contacts found</string>

    <string name="message_saved_success">Save with successful!</string>
    <string name="message_updated_success">Updated with successful!</string>
    <string name="message_saved_error">Error saving contact!</string>
    <string name="message_empty_fields">Fill empty fields before save!</string>

    <string name="title_dialog_delete_contact">Delete contact</string>
    <string name="message_dialog_delete_contact">Are you sure you want to delete this contact ?</string>
    <string name="response_positive_dialog_delete_contact">Yes</string>
    <string name="response_negative_dialog_delete_contact">No</string>
    <string name="message_delete_contact_success">Deleted with successful!</string>

</resources>